test/modules/errors/useMissingModule3.chpl
use Goober.Peas;

module Goober {
}
